--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,8 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+build_src_filter =
+    +<**/*.c>
+    +<**/*.cpp>
+    -<**/*.S>
+    -<**/*.asm>
