--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,4 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-build_src_filter =
-    +<**/*.c>
-    +<**/*.cpp>
-    -<**/*.S>
-    -<**/*.asm>
+build_src_filter = +<*> -<*.S> -<*.asm>
