--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
+lib_extra_dirs = lib
+lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
+build_flags = -Iinclude
