Add SoftwareSerial library dependency to platformio.ini
Included the SoftwareSerial library to the `lib_deps` field to ensure proper handling of serial communication.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_extra_dirs = lib
 lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
 build_flags = -Iinclude
+lib_deps = featherfly/SoftwareSerial@^1.0
