--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,6 @@ lib_extra_dirs = lib
 lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
 build_flags = -Iinclude
-lib_deps = featherfly/SoftwareSerial@^1.0
+lib_deps = 
+	featherfly/SoftwareSerial@^1.0
+	arduino-libraries/LiquidCrystal@^1.0.7
