Add logging functionality using ArduinoLog library
Introduce a `LogController` module to manage centralized logging. Replace direct `Serial` usage in `setup` with the new logging system for improved flexibility and maintainability. Update dependencies to include the `ArduinoLog` library in `platformio.ini`.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,4 @@ build_flags = -Iinclude
 lib_deps = 
 	featherfly/SoftwareSerial@^1.0
 	arduino-libraries/LiquidCrystal@^1.0.7
+	thijse/ArduinoLog@^1.1.1
