Enable optional logging control via build_flags
Added commented-out build_flags configuration for toggling logging. This allows users to easily enable or disable logging by commenting or uncommenting the relevant line in the platformio.ini file. No functional changes by default.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,10 @@ framework = arduino
 lib_extra_dirs = lib
 lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
+;comment the following line out to disable logging
 build_flags = -Iinclude
+;uncomment the following line to disable logging
+;build_flags = -Iinclude -DDISABLE_LOGGING
 lib_deps = 
 	featherfly/SoftwareSerial@^1.0
 	arduino-libraries/LiquidCrystal@^1.0.7
