create function and serial for co2sensor, including MHZ library

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,9 @@ framework = arduino
 lib_extra_dirs = lib
 lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
-;comment the following line out to disable logging
 build_flags = -Iinclude
-;uncomment the following line to disable logging
-;build_flags = -Iinclude -DDISABLE_LOGGING
 lib_deps = 
 	featherfly/SoftwareSerial@^1.0
 	arduino-libraries/LiquidCrystal@^1.0.7
 	https://github.com/thijse/Arduino-Log.git
+	tobiasschuerg/MH-Z CO2 Sensors@^1.6.0
