Refactor: move module files to "core" directory
Relocated all files from the "lib" folder to a new "core" directory to improve project structure and organization. Updated relevant paths and the `lib_extra_dirs` setting in `platformio.ini` to reflect these changes. This clarifies that the code in that directory contains the main business logic.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_extra_dirs = lib
+lib_extra_dirs = core
 lib_ldf_mode = deep+
 build_src_filter = +<*> -<*.S> -<*.asm>
 ;comment the following line out to disable logging
